# template

./: .gitignore  README.md  package_test.py  pyproject.toml
package/: __init__.py  module.py
package.py/: __init__.py
